fix spacing in frontend

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -413,38 +413,29 @@ th {
     display: flex;
     flex-direction: column;
     max-height: -webkit-fill-available, auto;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
+    position: relative;
+    overflow-wrap: break-word;
 }
 
-.chat-message-left-user {
+.chat-message-left,
+.chat-message-right {
     display: flex;
-    flex-shrink: 1;
+    color: #fff;
     border-radius: 25px;
-    margin-right: auto;
+    flex-shrink: 0;
+    position: relative;
 }
 .chat-message-left {
-    display: flex;
-    flex-shrink: 1;
     border-radius: 25px;
     background-color: #3db2ff;
     margin-right: auto;
-    color: #fff;
 }
-.chat-message-right-user {
-    display: flex;
-    flex-shrink: 1;
-    border-radius: 25px;
-    flex-direction: row-reverse;
-    margin-left: auto;
-}
+
 .chat-message-right {
-    display: flex;
-    flex-shrink: 1;
     background-color: #f37124;
-    border-radius: 25px;
     flex-direction: row-reverse;
     margin-left: auto;
-    color: #fff;
 }
 
 label {
@@ -571,6 +562,10 @@ legend + * {
     margin: 0;
     width: 100% !important;
     background-color: #3db2ff;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 .files {
     position: relative;
@@ -2064,23 +2059,38 @@ summary {
     appearance: none;
 }
 
+.form-control-report {
+    border: solid 1px;
+    margin: 0;
+    width: 75% !important;
+    display: block;
+    position: absolute;
+    height: 25%;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #fff;
+    background-color: #3db2ff;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 .form-control {
     display: block;
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 0.375rem 0.75rem;
+    /* padding: 0.375rem 0.75rem; */
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     background-color: #fff;
-    outline: 0;
     background-clip: padding-box;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 }
 @media (prefers-reduced-motion: reduce) {
     .form-control {
@@ -2815,11 +2825,11 @@ textarea.form-control-lg {
 .btn:hover {
     color: #ffff;
 }
-.btn-check:focus + .btn,
+/* .btn-check:focus + .btn,
 .btn:focus {
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(29, 128, 159, 0.25);
-}
+} */
 .btn:disabled,
 .btn.disabled,
 fieldset:disabled .btn {
@@ -2844,18 +2854,18 @@ fieldset:disabled .btn {
 .show > .btn-primary.dropdown-toggle {
     color: #fff;
 }
-.btn-check:checked + .btn-primary:focus,
+/* .btn-check:checked + .btn-primary:focus,
 .btn-check:active + .btn-primary:focus,
 .btn-primary:active:focus,
 .btn-primary.active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.25rem rgba(63, 147, 173, 0.5);
-}
+} */
 .btn-primary:disabled,
 .btn-primary.disabled {
     color: #fff;
-    background-color: #3db2ff;
-    border-color: #3db2ff;
+    /* background-color: #3db2ff; */
+    /* border-color: #3db2ff; */
 }
 
 .btn-secondary {
@@ -2940,23 +2950,23 @@ fieldset:disabled .btn {
     border-color: #198754;
 }
 
-.btn-info {
+/* .btn-info {
     color: #000;
     background-color: #0dcaf0;
     border-color: #0dcaf0;
-}
-.btn-info:hover {
+} */
+/* .btn-info:hover {
     color: #000;
     background-color: #31d2f2;
     border-color: #25cff2;
-}
-.btn-check:focus + .btn-info,
+} */
+/* .btn-check:focus + .btn-info,
 .btn-info:focus {
     color: #000;
     background-color: #31d2f2;
     border-color: #25cff2;
     box-shadow: 0 0 0 0.25rem rgba(11, 172, 204, 0.5);
-}
+} */
 .btn-check:checked + .btn-info,
 .btn-check:active + .btn-info,
 .btn-info:active,
